[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Tiny Alchemist Sprite Sheet 48x32.png" type="Texture" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/MainCamera.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83 ]
}

[sub_resource type="Curve" id=7]
max_value = 3.0
_data = [ Vector2( 0, 2.05215 ), 0.0, 0.0, 0, 0, Vector2( 0.991611, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 0.0

[sub_resource type="Curve" id=8]
max_value = 5.0
_data = [ Vector2( 0, 3.72699 ), 0.0, 0.0, 0, 0, Vector2( 0.951342, 0.0337423 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Run = SubResource( 4 )
anims/fall = SubResource( 6 )
anims/jump = SubResource( 5 )

[node name="RunParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 7 )
emitting = false
amount = 16
lifetime = 0.7
explosiveness = 0.15
local_coords = false
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, -90 )
initial_velocity = 20.0
linear_accel = -160.0
scale_amount_curve = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 9
vframes = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="WallRCL" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 7 )

[node name="WallRCR" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 3

[node name="JumpParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 450
randomness = 1.0
local_coords = false
direction = Vector2( 0, -10 )
spread = 90.0
gravity = Vector2( 0, 1 )
initial_velocity = 45.0
initial_velocity_random = 1.0
linear_accel = -74.07
radial_accel = 22.22
scale_amount_curve = SubResource( 8 )

[node name="ImpactParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 450
randomness = 1.0
local_coords = false
direction = Vector2( 0, -10 )
spread = 89.44
gravity = Vector2( 0, 1 )
initial_velocity = 55.0
initial_velocity_random = 1.0
linear_accel = -74.07
radial_accel = 22.22
scale_amount_curve = SubResource( 8 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
smoothing_enabled = true
smoothing_speed = 7.0
